--- a/invoices/SAPUI5/webapp/i18n/i18n.properties
+++ b/invoices/SAPUI5/webapp/i18n/i18n.properties
@@ -1,5 +1,10 @@
 #Application Descriptor
 appTitle=Invoices
 appDescription=Invoices List
+
+
 showHelloButtonText = Say Hello
 helloMsg = Hello {0}
+
+#Panels
+helloPanel = Hello Panel
